--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start:webpack": "webpack --watch --mode=development",
-    "dev": "nodemon server.js -- --ignore dist/ --ignore src/ & npm run start:webpack",
+    "webpack": "webpack --watch --mode=development",
+    "dev": "nodemon server.js -- --ignore dist/ --ignore src/ & npm run webpack",
     "start": "node server.js -- --ignore dist/ --ignore src/ & npm run build"
   },
   "repository": {
@@ -24,23 +24,30 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "bable-loader": "^0.0.1-security",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "assert": "^2.0.0",
     "babel-loader": "^9.1.0",
+    "bootstrap": "^5.2.2",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "path": "^0.12.7",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "recoil": "^0.7.6",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
