--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "webpack": "webpack --watch --mode=development",
-    "dev": "nodemon server.js -- --ignore dist/ --ignore src/ & npm run build",
-    "start": "node server.js & npm run build"
+    "dev": "npm run build & nodemon server.js -- --ignore dist/ --ignore src/",
+    "start": "npm run build & node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,15 +23,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "bable-loader": "^0.0.1-security",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "assert": "^2.0.0",
-    "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.2",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
@@ -43,7 +42,6 @@
     "path": "^0.12.7",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "recoil": "^0.7.6",
     "socket.io": "^4.5.3",
