--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongoose": "^6.7.2",
     "path": "^0.12.7",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
