--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "assert": "^2.0.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
